# ROS_ws

./: .gitignore  README.md  video.avi
bag_1/: bag_1_0.db3  metadata.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/camera_app_pkg/lib/camera_app_pkg/: camera_app_node  canny_pub  pub_image
install/camera_app_pkg/share/camera_app_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/camera_app_pkg/share/camera_app_pkg/launch/: camera_app.launch.py
install/camera_app_pkg/share/camera_app_pkg/params/: path.yaml
install/first_cpp_pkg/lib/first_cpp_pkg/: camera_app  dist_action_server  fibonacci_action_server  listener  multi_thread  pub_edge  pub_image  service_server  sub_image  talker  turtle_listener  turtle_talker
install/first_cpp_pkg/share/first_cpp_pkg/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/first_package/lib/first_package/: Dist_turtle_server  dist_turtle_server  first_node  first_node = first_package.first_node:mainsubscriber  multi_thread  pub_comp_image  pub_image  publisher  service_server  sub_comp_image  sub_image  subscriber  turtle_cmd_and_pose
install/first_package/share/first_package/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/first_package_cpp/lib/first_package_cpp/: first_node_cpp
install/first_package_cpp/share/first_package_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/first_package_cpp/share/first_package_cpp/cmake/: first_package_cppConfig.cmake
install/first_package_msgs/share/first_package_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/first_package_msgs/share/first_package_msgs/action/: Distturtle.idl  Fibonacci.idl
install/first_package_msgs/share/first_package_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  export_first_package_msgs__rosidl_generator_cppExport.cmake  export_first_package_msgs__rosidl_generator_pyExport.cmake  export_first_package_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_first_package_msgs__rosidl_typesupport_fastrtps_cExport.cmake  (+5 more)
install/opencv_tutorials/lib/opencv_tutorials/: pub_comp_image  pub_image  sub_comp_image  sub_image
install/opencv_tutorials/share/opencv_tutorials/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/camera_app_pkg/: setup.cfg  setup.py
src/camera_app_pkg/camera_app_pkg/: camera_app.py  camera_app_re.ui  canny_pub.py
src/camera_app_pkg/launch/: camera_app.launch.py
src/camera_app_pkg/param/: path.yaml
src/first_cpp_pkg/: CMakeLists.txt  package.xml
src/first_cpp_pkg/include/first_cpp_pkg/: publisher.hpp  subscriber.hpp
src/first_cpp_pkg/include/first_cpp_pkg/test/: subscriber.hpp
src/first_cpp_pkg/launch/: turtlesim_and_teleop.launch.xml
src/first_cpp_pkg/src/: camera_app.cpp  dist_action_server.cpp  fibonacci_action_server.cpp  multi_thread.cpp  pub_edge.cpp  pub_image.cpp  publisher.cpp  service_server.cpp  sub_image.cpp  subscriber.cpp  turtle_cmd_and_pose.cpp
src/first_package/: package.xml  setup.cfg  setup.py
src/first_package/first_package/: aruco_test.py  dist_turtle_action_server.py  nav_to_python.ipynb  pub_image.py  publisher.py  service_server.py  turtle_cmd_and_pose.py
src/first_package/first_package/.ipynb_checkpoints/: nav_to_python-checkpoint.ipynb
src/first_package/launch/: camera.launch.py  turtle_first_launch.launch.py
src/first_package/params/: turtlesim.yaml
src/first_package_msgs/: CMakeLists.txt
src/first_package_msgs/action/: DistTurtle.action
src/opencv_tutorials/: package.xml  setup.cfg  setup.py
src/opencv_tutorials/launch/: camera.launch.py
src/opencv_tutorials/params/: size.yaml
turtle_test/: metadata.yaml  turtle_test_0.db3
(+99 files in other folders)
