<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>first_cpp_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wogur21c@gmail.com">rds</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>



  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>turtlesim</depend>
  <depend>first_package_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>camera_app</depend>
  <depend>Opencv</depend>
  <depend>cv_bridge</depend>
  


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
